--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       </footer>
     </div>
 
-    <script type="text/javascript" src="/js/jquery.js.txt"></script>
-    <script type="text/javascript" src="/js/script.js"></script>
+    <script type="text/javascript" src="../js/jquery.js.txt"></script>
+    <script type="text/javascript" src="../js/script.js"></script>
   </body>
 </html>
