--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
           </div>
         </div>
       </footer>
-      <script type="text/javascript" src="../js/jquery.js.txt"></script>
-    <script type="text/javascript" src="../js/script.js"></script>
+      <script type="text/javascript" src="js/jquery.js.txt"></script>
+    <script type="text/javascript" src="js/script.js"></script>
     </div>
 
     
